feat: add aggregate population AB#27281

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -118,7 +118,7 @@
       <span *ngIf="!event.thresholdReached">{{ 'chat-component.' + disasterTypeName + '.alertLevel.expected' | translate }} {{ event.firstLeadTimeDate }}</span>
     </p>
     <p *ngIf="event.affectedAreas">
-      <strong>{{ 'chat-component.' + disasterTypeName + '.alertLevel.exposed-districts' | translate }} </strong>
+      <strong>{{ 'chat-component.' + disasterTypeName + '.alertLevel.exposed-areas' | translate : {adminAreaLabelPlural: adminAreaLabelPlural} }} </strong>
       <span>{{ event.affectedAreas }}</span>
     </p>
   </ng-container>
