style: align glofas popup colors AB#27487

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -197,13 +197,9 @@
           }}</span
         >
       </p>
-      <ul>
-        <li
-          *ngFor="let area of class.areas"
-          class="clickable-area"
-          (click)="selectArea(area)"
-        >
-          <p>
+      <ul class="area-list">
+        <li *ngFor="let area of class.areas" (click)="selectArea(area)">
+          <p class="clickable-area">
             {{ area.name }}
             <span *ngIf="area.nameParent">({{ area.nameParent }})</span>
             <ng-container *ngIf="area.actionsValue && area.actionsValue > 0">
