--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.scss
@@ -22,6 +22,10 @@ ion-checkbox {
 .clickable-area {
   text-decoration: underline;
   cursor: pointer;
+
+  :hover {
+    font-weight: bold;
+  }
 }
 
 .event-header {
