--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -50,16 +50,16 @@
     padding-bottom: 4px;
     border: 1px #f5f6f9 solid;
   }
-  .header-row {
-    justify-content: flex-start;
-    align-items: center;
-    gap: 40px;
-    display: inline-flex;
+  .header-row td {
+    vertical-align: middle;
+    padding-right: 20px; /* adjust as needed */
+    padding-left: 20px; /* adjust as needed */
   }
   .table-cell {
     height: 19px;
     padding: 2px 10px;
     width: 211px;
+    text-align: left;
   }
 
   /* Event table styles */
