--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -13,7 +13,7 @@
   .body-text-normal {
     font-weight: 400;
   }
-  .body-text-smaller {
+  .body-text-16px {
     font-size: 16px;
     line-height: 19.2px;
   }
@@ -25,11 +25,25 @@
   .body-text-white {
     color: white;
   }
+  .body-text-12px {
+    font-size: 12px;
+    line-height: 14.4px;
+  }
+  .important-black {
+    color: black !important;
+  }
 
   /* Icon styles */
   .body-text-icon {
     width: 14px;
     height: 14px;
+  }
+
+  .ibf-logo {
+    width: 45px;
+    height: 45px;
+    display: block;
+    padding-right: 10px;
   }
 
   /* Text formatting styles */
@@ -58,7 +72,6 @@
   .table-cell {
     height: 19px;
     padding: 2px 10px;
-    width: 211px;
     text-align: left;
   }
 
@@ -79,5 +92,33 @@
   }
   .padding-top {
     padding-top: 10px;
+  }
+
+  /* Notification action button styles */
+  .notification-action-button {
+    height: 40px;
+    width: 200px;
+    font-weight: bold;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+  }
+  .notification-action-button-primary {
+    background-color: #6200ee;
+  }
+  .notification-action-button.notification-action-button-primary a {
+    color: #ffffff !important;
+    text-decoration: none !important;
+  }
+  .notification-action-button-secondary {
+    background-color: #ffffff;
+  }
+  .notification-action-button.notification-action-button-secondary a {
+    color: #6200ee !important;
+    text-decoration: none !important;
+  }
+  .button-text-padding {
+    padding: 12px 18px 12px 18px;
+    border-radius: 3px;
   }
 </style>
