fix: show exposed pop only for trigger AB#27281

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -183,7 +183,7 @@
           "
         ></ion-label
         ><br />
-        <ion-note size="small">
+        <ion-note *ngIf="eventState?.event?.thresholdReached" size="small">
           <span
             [innerHTML]="
               'chat-component.' + disasterTypeName + '.active-event.exposed'
