--- a/interfaces/IBF-dashboard/src/app/components/timestamp/timestamp.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timestamp/timestamp.component.html
@@ -1,3 +1,3 @@
-<ion-text class="ion-float-end">
+<ion-text class="ion-float-end" *ngIf="timestamp">
   {{ displayDate }} - <strong>{{ displayTime }}</strong>
 </ion-text>
