style: rm padding bottom from chat cards AB#28151

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -16,6 +16,10 @@
 
   width: 100%;
 
+  ion-card {
+    margin-bottom: 0;
+  }
+
   ion-card-content {
     -webkit-inline-start: 8px !important;
     padding-inline-start: 8px !important;
