--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -23,6 +23,16 @@ $toggle-button-right: 0.5vw;
     width: 100%;
     height: $line-height;
     --border-radius: 0;
+    div {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      ion-icon {
+        font-size: 1rem;
+      }
+    }
   }
 
   #layer-menu {
