--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -121,4 +121,24 @@
     padding: 12px 18px 12px 18px;
     border-radius: 3px;
   }
+
+  /* Notification title styles */
+  .notification-title {
+    color: white;
+    text-align: center;
+  }
+
+  .full-width-table {
+    width: 100%;
+    border: 0;
+    cellspacing: 0;
+    cellpadding: 0;
+  }
+  .centered-text {
+    text-align: center;
+  }
+
+  .white-text {
+    color: white;
+  }
 </style>
