--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -1,9 +1,10 @@
 $z-index: 900;
 $menu-width: 13vw;
 $menu-width-small-res: 16vw;
-$line-height: 2.26rem;
-$toggle-button-bottom: 1rem;
+$toggle-button-bottom: 1.5rem;
 $toggle-button-right: 0;
+$toggle-button-height: 2.26rem;
+$line-height: 1.5rem;
 
 #layer-menu-container {
   position: fixed;
@@ -14,14 +15,14 @@ $toggle-button-right: 0;
   height: $line-height;
   display: flex;
   flex-direction: column;
-  max-height: calc(0.625rem + $line-height * 10);
+  max-height: calc($toggle-button-height + ($line-height * 10));
   @media (max-width: 1280px) {
     width: $menu-width-small-res;
   }
 
   #layer-menu-toggle-button {
     width: 100%;
-    height: $line-height;
+    height: $toggle-button-height;
     --border-radius: 0.25rem 0 0 0;
     div {
       width: 100%;
@@ -36,19 +37,18 @@ $toggle-button-right: 0;
   }
 
   #layer-menu {
-    width: $menu-width;
-    max-height: calc(0.625rem + $line-height * 9);
     bottom: 0px;
     overflow-y: auto;
+
     ion-row {
-      min-height: 36px;
+      min-height: $line-height;
       border: 1px solid var(--ion-color-ibf-no-alert-primary);
       border-top: none;
     }
 
     ion-item {
       width: 98%;
-      --min-height: 36px;
+      --min-height: $line-height;
       --padding-bottom: 0;
       --padding-top: 0;
       --padding-start: 4px;
