--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -51,8 +51,8 @@ $line-height: 1.5rem;
       --min-height: $line-height;
       --padding-bottom: 0;
       --padding-top: 0;
-      --padding-start: 4px;
-      --padding-end: 4px;
+      --padding-start: 0.25rem;
+      --padding-end: 0.25rem;
       --inner-padding-start: 0;
       --inner-padding-end: 0;
 
@@ -61,40 +61,15 @@ $line-height: 1.5rem;
         height: 18px;
       }
 
-      .matrix-toggler {
-        width: 18px;
-        height: 18px;
-        background-color: #fff;
-        border: 2px solid var(--ion-color-ibf-no-alert-primary);
+      .single-layer-toggler {
+        font-size: 1.3rem;
         cursor: pointer;
-
-        &.matrix-check {
-          border-radius: 2px;
-        }
-
-        &.matrix-radio {
-          border-radius: 50%;
-        }
-
-        .matrix-check-mark {
-          width: 16px;
-          height: 16px;
-          background-color: var(--ion-color-ibf-no-alert-primary);
-          stroke: #fff;
-          stroke-width: 4px;
-        }
-        .matrix-radio-circle {
-          width: 14px;
-          height: 14px;
-          background-color: var(--ion-color-ibf-no-alert-primary);
-          border: 2px solid #fff;
-          border-radius: 50%;
-        }
+        color: var(--ion-color-ibf-no-alert-primary);
       }
 
       ion-label {
         width: 80%;
-        font-size: 12px;
+        font-size: 0.75rem;
       }
 
       .info-button {
