--- a/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
@@ -18,7 +18,8 @@
       <ion-item>
         <ion-label position="stacked">New Password</ion-label>
         <ion-input
-          [(ngModel)]="model.newPassword"
+          [ngModel]="model.newPassword"
+          (ngModelChange)="model.newPassword = $event"
           name="new-password"
           type="password"
           required
@@ -32,7 +33,8 @@
       <ion-item>
         <ion-label position="stacked">Confirm Password</ion-label>
         <ion-input
-          [(ngModel)]="model.confirmPassword"
+          [ngModel]="model.confirmPassword"
+          (ngModelChange)="model.confirmPassword = $event"
           name="confirm-password"
           type="password"
           required
