fix: reduce gap between warning and expected exposed

--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -88,10 +88,13 @@
 
   /* Miscellaneous styles */
   .padded-div {
-    height: 20px;
+    height: 16px;
   }
   .padding-top {
-    padding-top: 10px;
+    padding-top: 8px;
+  }
+  .padding-bottom {
+    padding-bottom: 8px;
   }
 
   /* Notification action button styles */
