fix: table spacing

--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -96,11 +96,18 @@
   .padding-bottom {
     padding-bottom: 8px;
   }
+  .padding-left {
+    padding-left: 8px;
+  }
+  .padding-right {
+    padding-right: 8px;
+  }
 
   /* Notification action button styles */
   .notification-action-button {
-    height: 40px;
-    width: 200px;
+    display: block;
+    height: 22.4px;
+    width: 150px;
     font-weight: bold;
     border: 0px;
     border-radius: 40px;
@@ -109,20 +116,21 @@
   .notification-action-button-primary {
     background-color: #6200ee;
   }
-  .notification-action-button.notification-action-button-primary a {
+  .notification-action-button.notification-action-button-primary {
     color: #ffffff !important;
     text-decoration: none !important;
   }
   .notification-action-button-secondary {
     background-color: #ffffff;
   }
-  .notification-action-button.notification-action-button-secondary a {
+  .notification-action-button.notification-action-button-secondary {
     color: #6200ee !important;
     text-decoration: none !important;
   }
   .button-text-padding {
     padding: 12px 18px 12px 18px;
-    border-radius: 3px;
+    border-radius: 50px;
+    white-space: nowrap;
   }
 
   /* Notification title styles */
